Resolved issues with using Swagger docs to test OAuth and JWT endpoints. User endpoints now working.
